Adds excercise for objects

--- a/exercices/Day0/index.html
+++ b/exercices/Day0/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>30DaysOfScript:Inline Script</title>
-    <script src="exercice1.js"></script>
+    <script src="exercise_1_conditionals.js"></script>
   </head>
   <body>
     <button onclick="alert('Welcome to 30DaysOfJavaScript!')">Click Me</button>
